# SERENADE

./: .gitignore  CMakeLists.txt  README.md  csv_utils.hpp  serena_graph_based.hpp  serenade.hpp
data/: n=1024.txt  n=128.txt  n=256.txt  n=32.txt  n=512.txt  n=55.txt  n=64.txt
data/bsit/: bsit_n=1024.csv  bsit_n=128.csv  bsit_n=16.csv  bsit_n=256.csv  bsit_n=32.csv  bsit_n=512.csv  bsit_n=64.csv  bsit_n=8.csv
py/: bsit_cross_checking.py  iterations_def.csv  iterations_serenade_disc.py
py/ouroboros/: n=1024.txt  n=256.txt  n=512.txt
test/: CMakeLists.txt  benchmark_boost_acc.cpp  boost_acc_example.cpp  boost_tokenizer_test.cpp  bs_it_test.cpp  serenade_test.cpp  string_fmt_boost.cpp  vector_pointer_test.cpp
